--- a/foodZen/package.json
+++ b/foodZen/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/tests/ingredientModelTest.js server/tests/recipeModelTest.js server/tests/userModelTest.js",
+    "start": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,14 +21,11 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
+    "graceful-fs": "^4.1.3",
     "jwt-simple": "^0.2.0",
     "mongoose": "^4.1.0",
     "morgan": "^1.1.1",
     "q": "^1.4.1",
     "request": "^2.36.0"
-  },
-  "scripts": {
-    "test": "mocha server/tests/ingredientModelTest.js server/tests/recipeModelTest.js server/tests/userModelTest.js",
-    "start": "nodemon server/server.js"
   }
 }
