--- a/foodZen/bower.json
+++ b/foodZen/bower.json
@@ -21,6 +21,7 @@
     "angular-mocks": "~1.3.16",
     "bootstrap": "^3.3.6",
     "jQuery": "^2.2.0",
-    "checklist-model": "^0.9.0"
+    "checklist-model": "^0.9.0",
+    "angular-sanitize": "^1.5.0"
   }
 }
