--- a/foodZen/package.json
+++ b/foodZen/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^2.0.43"
   },
   "dependencies": {
+    "angular-sanitize": "^1.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
