--- a/foodZen/package.json
+++ b/foodZen/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "jwt-simple": "^0.2.0",
+    "mailgun-js": "^0.7.7",
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0",
     "q": "^1.4.1",
