--- a/foodZen/bower.json
+++ b/foodZen/bower.json
@@ -22,6 +22,8 @@
     "bootstrap": "^3.3.6",
     "jQuery": "^2.2.0",
     "checklist-model": "^0.9.0",
-    "angular-sanitize": "^1.5.0"
+    "angular-sanitize": "^1.5.0",
+    "angular-ui-bootstrap": "^1.2.2",
+    "angular-animate": "^1.5.0"
   }
 }
